--- a/config/drone/api/drone_config_0.json
+++ b/config/drone/api/drone_config_0.json
@@ -38,7 +38,7 @@
             "physicsEquation": "BodyFrame",
             "useQuaternion": true,
             "collision_detection": true,
-            "enable_disturbance": true,
+            "enable_disturbance": false,
             "manual_control": false,
             "airFrictionCoefficient": [
                 0.5,
