--- a/config/drone/ardupilot/drone_config_0.json
+++ b/config/drone/ardupilot/drone_config_0.json
@@ -36,9 +36,9 @@
     "components": {
         "droneDynamics": {
             "physicsEquation": "BodyFrame",
-            "useQuaternion": false,
+            "useQuaternion": true,
             "collision_detection": true,
-            "enable_disturbance": false,
+            "enable_disturbance": true,
             "manual_control": false,
             "airFrictionCoefficient": [
                 0.2,
@@ -64,7 +64,8 @@
                 0,
                 0,
                 0
-            ]
+            ],
+            "body_boundary_disturbance_power": 4.0
         },
         "battery": {
           "vendor": "None",
@@ -85,7 +86,8 @@
               "K": 3.28e-3,
               "D": 0.0,
               "J": 8.12e-6
-          }
+          },
+          "radius": 0.03
         },
         "thruster": {
             "vendor": "None",
