updated params for demo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -49,6 +49,7 @@ RUN git clone --recursive https://github.com/toppers/hakoniwa-core-cpp-client.gi
     # Python モジュールのインストール（必要に応じて追加）
 RUN pip3 install --upgrade pip setuptools wheel \
     numpy \
+    scipy \
     && pip3 install aiohttp>=3.10.0 aiohttp_cors>=0.7.0 websockets==13.1
 
 RUN apt-get update && apt-get install iproute2 -y
