Rename UDP comm tests and add TCP send test

--- a/test/api/comm/recv/CMakeLists.txt
+++ b/test/api/comm/recv/CMakeLists.txt
@@ -7,13 +7,13 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 
-add_executable(test_comm_recv test_comm_recv.cpp)
+add_executable(test_comm_recv_udp test_comm_recv_udp.cpp)
 
 # use headers from project
-target_include_directories(test_comm_recv PRIVATE ${PROJECT_ROOT_DIR}/include)
+target_include_directories(test_comm_recv_udp PRIVATE ${PROJECT_ROOT_DIR}/include)
 
 # compile options
-target_compile_features(test_comm_recv PRIVATE cxx_std_17)
+target_compile_features(test_comm_recv_udp PRIVATE cxx_std_17)
 
 # link libs
 set(LIBS
@@ -26,8 +26,8 @@ set(LIBS
     pthread
 )
 
-target_link_libraries(test_comm_recv PRIVATE gtest_main ${LIBS})
+target_link_libraries(test_comm_recv_udp PRIVATE gtest_main ${LIBS})
 
-target_link_directories(test_comm_recv PRIVATE ${PROJECT_ROOT_DIR}/lib)
+target_link_directories(test_comm_recv_udp PRIVATE ${PROJECT_ROOT_DIR}/lib)
 
-add_test(NAME comm_recv COMMAND test_comm_recv)
+add_test(NAME comm_recv_udp COMMAND test_comm_recv_udp)
