--- a/test/api/comm/send/CMakeLists.txt
+++ b/test/api/comm/send/CMakeLists.txt
@@ -7,13 +7,16 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 
-add_executable(test_comm_send test_comm_send.cpp)
+add_executable(test_comm_send_udp test_comm_send_udp.cpp)
+add_executable(test_comm_send_tcp test_comm_send_tcp.cpp)
 
 # use headers from project
-target_include_directories(test_comm_send PRIVATE ${PROJECT_ROOT_DIR}/include)
+target_include_directories(test_comm_send_udp PRIVATE ${PROJECT_ROOT_DIR}/include)
+target_include_directories(test_comm_send_tcp PRIVATE ${PROJECT_ROOT_DIR}/include)
 
 # compile options
-target_compile_features(test_comm_send PRIVATE cxx_std_17)
+target_compile_features(test_comm_send_udp PRIVATE cxx_std_17)
+target_compile_features(test_comm_send_tcp PRIVATE cxx_std_17)
 
 # link libs
 set(LIBS
@@ -26,8 +29,11 @@ set(LIBS
     pthread
 )
 
-target_link_libraries(test_comm_send PRIVATE gtest_main ${LIBS})
+target_link_libraries(test_comm_send_udp PRIVATE gtest_main ${LIBS})
+target_link_libraries(test_comm_send_tcp PRIVATE gtest_main ${LIBS})
 
-target_link_directories(test_comm_send PRIVATE ${PROJECT_ROOT_DIR}/lib)
+target_link_directories(test_comm_send_udp PRIVATE ${PROJECT_ROOT_DIR}/lib)
+target_link_directories(test_comm_send_tcp PRIVATE ${PROJECT_ROOT_DIR}/lib)
 
-add_test(NAME comm_send COMMAND test_comm_send)
+add_test(NAME comm_send_udp COMMAND test_comm_send_udp)
+add_test(NAME comm_send_tcp COMMAND test_comm_send_tcp)
