--- a/test/api/comm/recv/CMakeLists.txt
+++ b/test/api/comm/recv/CMakeLists.txt
@@ -8,12 +8,15 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 add_executable(test_comm_recv_udp test_comm_recv_udp.cpp)
+add_executable(test_comm_recv_tcp test_comm_recv_tcp.cpp)
 
 # use headers from project
 target_include_directories(test_comm_recv_udp PRIVATE ${PROJECT_ROOT_DIR}/include)
+target_include_directories(test_comm_recv_tcp PRIVATE ${PROJECT_ROOT_DIR}/include)
 
 # compile options
 target_compile_features(test_comm_recv_udp PRIVATE cxx_std_17)
+target_compile_features(test_comm_recv_tcp PRIVATE cxx_std_17)
 
 # link libs
 set(LIBS
@@ -27,7 +30,10 @@ set(LIBS
 )
 
 target_link_libraries(test_comm_recv_udp PRIVATE gtest_main ${LIBS})
+target_link_libraries(test_comm_recv_tcp PRIVATE gtest_main ${LIBS})
 
 target_link_directories(test_comm_recv_udp PRIVATE ${PROJECT_ROOT_DIR}/lib)
+target_link_directories(test_comm_recv_tcp PRIVATE ${PROJECT_ROOT_DIR}/lib)
 
 add_test(NAME comm_recv_udp COMMAND test_comm_recv_udp)
+add_test(NAME comm_recv_tcp COMMAND test_comm_recv_tcp)
