updated for latest

--- a/drone_api/rc/rc_config/Nintendo-ProControl-lnx.json
+++ b/drone_api/rc/rc_config/Nintendo-ProControl-lnx.json
@@ -83,6 +83,12 @@
             "type": "switch",
             "off": "up",
             "on": "down"
+        },
+        "ControlModeChange": {
+            "index": 2,
+            "type": "switch",
+            "off": "up",
+            "on": "down"
         }
     }
 }
