add download libs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,59 @@ else()
 endif()
 FetchContent_MakeAvailable(json)
 
+# Pre-built libraries for hakoniwa-drone-core
+include(FetchContent)
+
+# 1. Determine the asset based on the OS
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    set(HAKO_DRONE_LIB_ASSET "lnx.zip")
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+    set(HAKO_DRONE_LIB_ASSET "mac.zip")
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    set(HAKO_DRONE_LIB_ASSET "win.zip")
+else()
+    message(FATAL_ERROR "Unsupported OS: ${CMAKE_SYSTEM_NAME}")
+endif()
+
+# 2. Get the latest release tag name from GitHub API
+set(HAKO_DRONE_LIB_REPO "toppers/hakoniwa-drone-core")
+set(LATEST_RELEASE_API_URL "https://api.github.com/repos/${HAKO_DRONE_LIB_REPO}/releases/latest")
+set(JSON_FILE "${CMAKE_BINARY_DIR}/latest_release.json")
+
+# Use curl to fetch the latest release info
+execute_process(
+    COMMAND curl -L -s -o ${JSON_FILE} ${LATEST_RELEASE_API_URL}
+    RESULT_VARIABLE CURL_RESULT
+)
+
+if(NOT CURL_RESULT EQUAL 0)
+    message(FATAL_ERROR "Failed to fetch latest release info from GitHub API.")
+endif()
+
+# Parse the JSON to get the tag_name
+file(READ ${JSON_FILE} JSON_CONTENT)
+string(JSON LATEST_TAG GET ${JSON_CONTENT} "tag_name")
+
+if(NOT LATEST_TAG)
+    message(FATAL_ERROR "Could not parse tag_name from GitHub API response.")
+endif()
+
+message(STATUS "Latest release tag: ${LATEST_TAG}")
+
+# 3. Construct the final download URL and fetch the content
+set(HAKO_DRONE_LIB_URL "https://github.com/${HAKO_DRONE_LIB_REPO}/releases/download/${LATEST_TAG}/${HAKO_DRONE_LIB_ASSET}")
+
+FetchContent_Declare(
+    prebuilt_libs
+    URL ${HAKO_DRONE_LIB_URL}
+)
+
+FetchContent_MakeAvailable(prebuilt_libs)
+
+# Add the downloaded library directory directly to the link and include paths
+link_directories(${prebuilt_libs_SOURCE_DIR})
+message(STATUS "Linking against pre-built libraries in ${prebuilt_libs_SOURCE_DIR}")
+
 # OS とアーキテクチャを使ったディレクトリ設定
 set(LIB_OUTPUT_DIR "${CMAKE_BINARY_DIR}/lib/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}")
 message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
