--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -56,6 +56,9 @@ RUN wget -O lnx.zip https://github.com/toppers/hakoniwa-drone-core/releases/late
     && rm -rf lnx lnx.zip
 
 
+RUN pip3 install --break-system-packages hakoniwa-pdu
+
+
 WORKDIR /root
 
 
