--- a/config/launcher/drone-api-ubuntu.launch.json
+++ b/config/launcher/drone-api-ubuntu.launch.json
@@ -6,16 +6,17 @@
     "stderr": "logs/${asset}.err",
     "env": {
       "prepend": {
-        "lib_path": [
-          "/usr/lib/x86_64-linux-gnu"
-        ],
+        "lib_path": ["/usr/lib/x86_64-linux-gnu"],
         "PATH": ["/usr/bin"],
         "PYTHONPATH": [
-          "/usr/lib/python3/dist-packages",
+          "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api",
+          "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api/assets",
+          "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api/assets/lib",
+          "/usr/local/lib/python3.12/dist-packages",
           "/home/tmori/.pyenv/versions/3.12.3/lib/python3.12/site-packages"
         ]
       }
-    },    
+    },
     "start_grace_sec": 1,
     "delay_sec": 3
   },
@@ -24,45 +25,24 @@
       "name": "drone",
       "activation_timing": "before_start",
       "command": "lnx/linux-main_hako_drone_service",
-      "args": [
-        "config/drone/api",
-        "config/pdudef/webavatar.json"
-      ],
+      "args": ["config/drone/api", "config/pdudef/webavatar.json"],
       "cwd": "/home/tmori/hakoniwa/hakoniwa-drone-core"
     },
     {
       "name": "environment",
       "activation_timing": "before_start",
       "command": "python",
-      "args": [
-        "-m",
-        "hako_env_event",
-        "../config/pdudef/webavatar.json",
-        "20", "assets/config"
-      ],
-      "cwd": "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api",
-      "env": {
-        "prepend": {
-          "PYTHONPATH": [
-            "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api",
-            "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api/assets",
-            "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api/assets/lib"
-          ]
-        }
-      }
+      "args": ["-m","hako_env_event","../config/pdudef/webavatar.json","20","assets/config"],
+      "cwd": "/home/tmori/hakoniwa/hakoniwa-drone-core/drone_api"
     },
     {
       "name": "webserver",
       "activation_timing": "after_start",
       "command": "python",
-      "args": [
-        "-m",
-        "server.main",
-        "--asset_name", "WebServer",
-        "--config_path", "../hakoniwa-drone-core/config/pdudef/webavatar.json",
-        "--delta_time_usec", "20000"
-      ],
-      "cwd": "/home/tmori/hakoniwa/hakoniwa-webserver",
+      "args": ["-m","server.main","--asset_name","WebServer",
+               "--config_path","/home/tmori/hakoniwa/hakoniwa-drone-core/config/pdudef/webavatar.json",
+               "--delta_time_usec","20000"],
+      "cwd": "/home/tmori/hakoniwa/hakoniwa-drone-core/../hakoniwa-webserver",
       "depends_on": ["drone"]
     },
     {
@@ -77,6 +57,6 @@
   "notify": {
     "type": "exec",
     "command": "scripts/notify_on_fail.sh",
-    "args": ["${asset}", "asset_exit", "${timestamp}"]
+    "args": ["${asset}","asset_exit","${timestamp}"]
   }
 }
