--- a/config/drone/mujoco-shibuya-api-10/drone_config_3.json
+++ b/config/drone/mujoco-shibuya-api-10/drone_config_3.json
@@ -1,5 +1,5 @@
 {
-  "name": "Drone",
+  "name": "Drone3",
   "simulation": {
       "lockstep": true,
       "timeStep": 0.003,
@@ -23,25 +23,30 @@
           "hil_gps": 3
       },
       "location": {
-          "latitude": 34.65436065,
-          "longitude": 135.16060138,
-          "altitude": 10,
+          "latitude": 35.6625,
+          "longitude": 139.69375,
+          "altitude": 15.4,
           "magneticField": {
-              "intensity_nT": 46257.8,
-              "declination_deg": -4.463,
-              "inclination_deg": 48.429
+              "intensity_nT": 53045.1,
+              "declination_deg": 15.306,
+              "inclination_deg": 68.984
           }
       }
   },
   "components": {
       "droneDynamics": {
-          "physicsEquation": "BodyFrame",
-          "useQuaternion": true,
+          "physicsEquation": "MuJoCo",
+          "mujoco": {
+            "modelName": "d4_b_drone_base",
+            "propNames": [ "d4_b_prop1", "d4_b_prop2", "d4_b_prop3", "d4_b_prop4" ],
+            "modelPath": "config/drone/mujoco-shibuya-api-10/drone.xml"
+          },
+          "useQuaternion": false,
           "collision_detection": true,
           "enable_disturbance": true,
           "manual_control": false,
           "airFrictionCoefficient": [
-              0.2,
+              0.05,
               0.0
           ],
           "inertia": [
@@ -49,23 +54,23 @@
               0.00653,
               0.0116
           ],
-          "mass_kg": 0.71,
+          "mass_kg": 0.61079,
           "body_size": [
               0.1,
               0.1,
               0.01
           ],
           "position_meter": [
-              2933.0,
-              2097.0,
-              0
+              0.0,
+              3.0,
+              -18.1
           ],
           "angle_degree": [
               0,
               0,
               0
           ],
-          "body_boundary_disturbance_power": 4.0
+          "body_boundary_disturbance_power": 1.0
       },
       "battery": {
         "vendor": "None",
@@ -81,51 +86,52 @@
       "rotor": {
         "vendor": "BatteryModel",
         "dynamics_constants": {
-            "R": 0.12,
-            "Cq": 3.0e-8,
-            "K": 3.28e-3,
+            "R": 0.115,
+            "Ct": 1.12E-04,
+            "Cq": 2.64E-06,
+            "K": 0.0103796702,
             "D": 0.0,
-            "J": 8.12e-6
+            "J": 4.00E-04
         },
-        "radius": 0.03
+        "radius": 0.03 
       },
       "thruster": {
-          "vendor": "None",
+          "vendor": "MuJoCo",
           "rotorPositions": [
               {
                   "position": [
-                      0.05,
-                      0.05,
+                        0.18,
+                        0.18,
                       0
                   ],
                   "rotationDirection": 1.0
               },
               {
                   "position": [
-                      -0.05,
-                      -0.05,
+                      -0.18,
+                      -0.18,
                       0
                   ],
                   "rotationDirection": 1.0
               },
               {
                   "position": [
-                      0.05,
-                      -0.05,
+                      0.18,
+                      -0.18,
                       0
                   ],
                   "rotationDirection": -1.0
               },
               {
                   "position": [
-                      -0.05,
-                      0.05,
+                      -0.18,
+                      0.18,
                       0
                   ],
                   "rotationDirection": -1.0
               }
           ],
-          "Ct": 8.3E-07
+          "Ct": 1.12E-04
       },
       "sensors": {
           "acc": {
@@ -151,8 +157,10 @@
       }
   },
   "controller": {
-    "moduleDirectory": "../drone_control/cmake-build/workspace/RadioController",
-    "moduleName": "RadioController",
+    "moduleDirectory": "../drone_control/cmake-build/workspace/FlightController",
+    "paramText": "",
+    "paramFilePath": "config/controller/param-api-mixer-mujoco-shibuya.txt",
+    "moduleName": "FlightController",
       "direct_rotor_control": false,
       "mixer": {
           "vendor": "None",
