--- a/config/drone/mujoco/drone_config_0.json
+++ b/config/drone/mujoco/drone_config_0.json
@@ -43,7 +43,7 @@
           },
           "useQuaternion": false,
           "collision_detection": true,
-          "enable_disturbance": false,
+          "enable_disturbance": true,
           "manual_control": false,
           "airFrictionCoefficient": [
               0.5,
@@ -63,7 +63,7 @@
           "position_meter": [
               0.0,
               0.0,
-              -0.1
+              -0.9
           ],
           "angle_degree": [
               0,
